added title, first headin level 1, and paragraph about Whiskey

--- a/web_basics/index.html
+++ b/web_basics/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>All About Whiskey</title>
 </head>
 <body>
-<h1>Hello world</h1>
+	<h1>Welcome. I think you'll enjoy learning all about a fat house cat named Whiskey.</h1>
+		<p>Whiskey Ginger is a three year old house cat that I live with. She belongs to my roommate. Whiskey is incredibly fluffy and very clumsy. She also has feline herpes which has caused upper respiratory issues for her. Whiskey can often be heard wheezing and sneezing from any corner of the house.</p>
 </body>
 </html>
