--- a/web_basics/index.html
+++ b/web_basics/index.html
@@ -5,6 +5,20 @@
 </head>
 <body>
 	<h1>Welcome. I think you'll enjoy learning all about a fat house cat named Whiskey.</h1>
-		<p>Whiskey Ginger is a three year old house cat that I live with. She belongs to my roommate. Whiskey is incredibly fluffy and very clumsy. She also has feline herpes which has caused upper respiratory issues for her. Whiskey can often be heard wheezing and sneezing from any corner of the house.</p>
+		<p>Whiskey Ginger is a three year old house cat that I live with. She belongs to my roommate. Whiskey is <strong>incredibly</strong> fluffy and <strong>very</strong> clumsy. She also has <a href="http://pets.webmd.com/cats/feline-herpes-symptoms-treatment">feline herpes</a> which has caused upper respiratory issues for her. Whiskey can often be heard wheezing and sneezing from <em>any corner of the house</em>.</p>
+
+		<h2>Some of Whiskey's favorite activities are:</h2>
+			<ul>
+				<li>Sleeping on pillows</li>
+				<li>Looking out the window</li>
+				<li>Scratching her scratch post</li>
+			</ul>
+
+			<h3>Whiskey's morning routine:</h3>
+				<ol>
+					<li>Stretching</li>
+					<li>Meowing until you wake up</li>
+					<li>Tearing through the house like a maniac</li>
+				</ol>
 </body>
 </html>
