Update file with second table to show row/column span

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,34 @@
 			<td>Mushroom</td>
 		</tr>
 	</table>
+
+
+
+
+
+	<table border=1>
+	<tr>
+		<th>Header 1</th>
+		<th>Header 2</th>
+		<th>Header 3</th>
+		<th>Header 4</th>
+	</tr>
+	<tr>
+		<td rowspan="2">A</td>
+		<td>&nbsp;</td>
+		<td>Hi</td>
+		<td>Hello</td>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>2</td>
+		<td>3</td>
+	</tr>
+	<tr>
+		<td>B</td>
+		<td>Bye</td>
+		<td colspan="2">Later</td>
+	</tr>
+	</table>
 </body>
 </html>
