Comment on Release 4 reflection questions

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -56,3 +56,11 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <footer>This document was written by Claire and Ashley</footer>
 </body>
 </html>
+
+<!--Semantic elements give structure and meaning to the content you write. We need semantic elements to increase accessibility to the content since not all users are intepreting what's on the webpage in the same way. I think the headline tags <h1> are important because they show hierarchy of importance. 
+
+The browser displays elements on the page from top to bottom.
+
+We learned how to create snippets in Sublime. It took us a little bit of time to make sense of the code we were seeing in Sublime when creating a snippet, but eventually we were able to parse out where we needed to add our snippet and how to create a tab trigger. I'm sure I'll create snippets of blocks of code that i use often in the future to save time when coding.
+
+I think reading about how browsers display elements on a page and rendering is still fuzzy for me. I've been spending time reading about how web browsers work, but since I don't have much foundational knowledge about the technology and programs browsers use, my understanding is still high-level.-->
