--- a/css/positioning/octopus.html
+++ b/css/positioning/octopus.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Octopus Makeover</title>
+	<link rel="stylesheet" type="text/css" href="octostyles.css">
 </head>
 <body>
-	<img src="glasses.png" alt="Sunglasses">
-
-	<img src="hat.png" alt="Cowboy Hat">
-
-	<img src="octopus.png" alt="Octopus">
+	<div class="makeover-wrapper">
+		<div id="glasses"><img src="glasses.png" alt="Sunglasses"></div>
+		<div id="hat"><img src="hat.png" alt="Cowboy Hat"></div>
+		<div id="octopus"><img src="octopus.png" alt="Octopus"></div>
+	</div>
 </body>
 </html>
