--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -4,6 +4,8 @@
   <title>Resume</title>
   <!-- We're using Google Fonts, which you can also do on your sites, but you don't need to know how for any assessments in this unit. -->
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
+
   
 </head>
 <body>
