Add jQuery functions

--- a/web_dev/jquery/jquery_project.html
+++ b/web_dev/jquery/jquery_project.html
@@ -2,49 +2,50 @@
 <html lang="en">
 <head>
 	<title>Quick and Easy Homemade Dumplings</title>
- 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<h1>Quick and Easy Homemade Dumplings</h1>
 	<p>Dumplings are an important part of Northern Chinese culture and cuisine, especially during the Lunar New Year. Eating dumplings during New Year's celebrations symbolizes good fortune and wealth for the upcoming year. I always enjoy making and eating dumplings with my family. Here's a quick and easy recipe for dumplings.</p>
 	<img src="dumplings.jpg" alt="Dumplings" height="250" width="400">
-	<p>Prep time: 60 minutes</br>
-	Cook time: 20 minutes</p>
-	<ul class="ingredients">
-		<h2>Ingredients:</h2>
-		<li>1 head of napa cabbage</li>
-		<li>1/2 tablespoon salt</li>
-		<li>1 teaspoon fresh grated ginger</li>
-		<li>1/4 chopped cup green onions</li>
-		<li>1 pound ground pork</li>
-		<li>1 tablespoon soy sauce</li>
-		<li>1 tablespoon rice wine vinegar</li>
-		<li>1/2 tablespoon sesame oil</li>
-		<li>1/2 teaspoon ground pepper, black or white</li>
-		<li>1 package frozen round dumpling wrappers</li>
-	</ul>
+	<p class="notes">Prep time: 60 minutes</br>
+		Cook time: 20 minutes</p>
+		<ul class="ingredients">
+			<h2>Ingredients:</h2>
+			<li>1 head of napa cabbage</li>
+			<li>1/2 tablespoon salt</li>
+			<li>1 teaspoon fresh grated ginger</li>
+			<li>1/4 chopped cup green onions</li>
+			<li>1 pound ground pork</li>
+			<li>1 tablespoon soy sauce</li>
+			<li>1 tablespoon rice wine vinegar</li>
+			<li>1/2 tablespoon sesame oil</li>
+			<li>1/2 teaspoon ground pepper, black or white</li>
+			<li>1 package frozen round dumpling wrappers</li>
+		</ul>
 
-	<ol class="directions">
-		<h2>Directions:</h2>
-		<li>Remove frozen dumpling wrappers and let thaw at room temperature while preparing the filling.</li>
-		<li>For the filling, rinse and dry the cabbage leaves. Finally chop the cabbage or put in a food processor. Put the cabbage in a large bowl and sprinkle with salt to draw out moisture. Let sit for 15 minutes.</li>
-		<li>While salted cabbage is sitting, mix together ginger, green onions, pork, soy sauce, rice wine vinegar, and sesame oil. You can do this by hand or in the food processor then set aside.</li>
-		<li>Use your hands to squeeze out the excess moisture from the minced leaves. Put the cabbage back into the bowl and mix in the seasoned ground pork.</li>
-		<li>Put some water in a small bowl. Take a dumpling wrapepr and fill it with a small spoonful of filling, then dip your fingers into the bowl to wet the outside edges of the dumpling wrapper (this well help form a seal).</li>
-		<li>Bring together two sides of the wrapper to form a half-moon shape and make a crimp in the middle. Then, start from one end and make small folds to seal the edge of the dumpling together</li>
-		<li>Place the dumpling on a baking tray.</li>
-		<li>Cook the dumplings in boiling water for 8 minutes. Cooked dumplings will rise to the surface of the water. You can also freeze dumplings.</li>
-		<li>Serve with soy sauce or other dipping sauces.</li>
-	</ol>
-
-	<section class="comments_feedback">
-		<h3>Comments and Feedback</h3>
-		<form>
-			<input type="text" name="name" placeholder="Name">
-			<input type="text" name="comment" placeholder="Comments or Feedback">
-			<button type="button">Submit</button>
-		</form>
-	</section>
-</table>
+		<ol class="directions">
+			<h2>Directions:</h2>
+			<li>Remove frozen dumpling wrappers and let thaw at room temperature while preparing the filling.</li>
+			<li>For the filling, rinse and dry the cabbage leaves. Finally chop the cabbage or put in a food processor. Put the cabbage in a large bowl and sprinkle with salt to draw out moisture. Let sit for 15 minutes.</li>
+			<li>While salted cabbage is sitting, mix together ginger, green onions, pork, soy sauce, rice wine vinegar, and sesame oil. You can do this by hand or in the food processor then set aside.</li>
+			<li>Use your hands to squeeze out the excess moisture from the minced leaves. Put the cabbage back into the bowl and mix in the seasoned ground pork.</li>
+			<li>Put some water in a small bowl. Take a dumpling wrapepr and fill it with a small spoonful of filling, then dip your fingers into the bowl to wet the outside edges of the dumpling wrapper (this well help form a seal).</li>
+			<li>Bring together two sides of the wrapper to form a half-moon shape and make a crimp in the middle. Then, start from one end and make small folds to seal the edge of the dumpling together</li>
+			<li>Place the dumpling on a baking tray.</li>
+			<li>Cook the dumplings in boiling water for 8 minutes. Cooked dumplings will rise to the surface of the water. You can also freeze dumplings.</li>
+			<li>Serve with soy sauce or other dipping sauces.</li>
+		</ol>
+		<section class="comments_feedback">
+			<h3>Comments and Feedback</h3>
+			<form>
+				<input type="text" name="name" placeholder="Name">
+				<input type="text" name="comment" placeholder="Comments or Feedback">
+				<button type="button">Submit</button>
+			</form>
+		</section>
+	</table>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
